// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeaderButtonSignIn - Snapshots > matches snapshot for default HeaderButtonSignIn 1`] = `
<button
  class="gap-2"
  data-testid="header-sign-in-btn"
  data-variant="secondary"
  id="header-sign-in-btn"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-user-round-plus size-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 21a8 8 0 0 1 13.292-6"
    />
    <circle
      cx="10"
      cy="8"
      r="5"
    />
    <path
      d="M19 16v6"
    />
    <path
      d="M22 19h-6"
    />
  </svg>
  New here?
</button>
`;

exports[`HeaderButtonSignIn - Snapshots > matches snapshot with custom className 1`] = `
<button
  class="custom-class"
  data-testid="header-sign-in-btn"
  data-variant="secondary"
  id="header-sign-in-btn"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-user-round-plus size-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 21a8 8 0 0 1 13.292-6"
    />
    <circle
      cx="10"
      cy="8"
      r="5"
    />
    <path
      d="M19 16v6"
    />
    <path
      d="M22 19h-6"
    />
  </svg>
  New here?
</button>
`;
